fix: 일부 람다 함수 변경